--- a/0306_test.html
+++ b/0306_test.html
@@ -7,6 +7,7 @@
     <title>반복</title>
 </head>
 <body>
+    <h1>git 공부중입니다. (issue2)</h1>
     <p id="question">무작위 숫자 생성</p>
     <p id="ans"></p>
     <script>
