--- a/0306_test.html
+++ b/0306_test.html
@@ -7,6 +7,7 @@
     <title>반복</title>
 </head>
 <body>
+    <h2>충돌실험중...</h2>
     <p id="question">무작위 숫자 생성</p>
     <p id="ans"></p>
     <script>
